# Resume-Tailor-ATS-Scorer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  start.sh
.claude/: launch.json
.github/workflows/: ci.yml
docs/: build_one_pager.py  resume-forge-one-pager.docx  whitepaper.tex
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ForgeForm.tsx  ProgressView.tsx  ResultsView.tsx
frontend/src/lib/: api.ts
src/resume_forge/: __init__.py  ats.py  cli.py  cover.py  exceptions.py  ingest.py  jobs.py  latex.py  llm.py  mcp_server.py  models.py  pipeline.py  server.py  tailor.py
src/resume_forge/templates/: cover_letter.tex.j2  resume.tex.j2
tests/: conftest.py  test_ats.py  test_cover.py  test_ingest.py  test_jobs.py  test_latex.py  test_llm.py  test_pipeline.py  test_tailor.py
tests/fixtures/: sample_jd.txt  sample_resume.txt
