[project]
name = "resume-forge"
version = "0.1.0"
description = "ATS-optimized, LaTeX-generated resume tailoring: core library, MCP server, and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vishal Vasanthakumar Poornima" }]
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "pdfplumber>=0.11",
    "jinja2>=3.1",
    "python-docx>=1.1",
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.79"]
browser = ["playwright>=1.45"]
dev = ["pytest>=8.0", "anthropic>=0.79"]

[project.scripts]
resume-forge = "resume_forge.cli:main"
resume-forge-mcp = "resume_forge.mcp_server:main"
resume-forge-server = "resume_forge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
